--- a/server/html/app.html
+++ b/server/html/app.html
@@ -50,7 +50,7 @@
         max-width: 20em;
         white-space: nowrap;
         text-overflow: ellipsis;
-        overflow-x: hidden;
+        overflow: hidden;
       }
 
       #code tr paper-icon-button {
