--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="ChetBot - Android and iOS UI test automation made simple, right in your web browser.">
+    <meta name="description" content="ChetBot - Android UI test automation made simple, right in your web browser.">
     <meta name="author" content="Chetan Padia">
 
     <link rel="icon" href="/favicon.ico">
 
-    <title>ChetBot - Android and iOS UI automation for humans</title>
+    <title>ChetBot - Android UI automation for humans</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
@@ -28,16 +28,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-    <style type="text/css">
-        code {
-            padding: 2em;
-            border: none;
-            position: relative;
-            top: 3em;
-        }
-    </style>
-
 </head>
 
 <body>
@@ -59,9 +49,6 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#demo">Demo</a>
-                    </li>
-                    <li>
                         <a href="#features">Features</a>
                     </li>
                     <li>
@@ -69,6 +56,9 @@
                     </li>
                     <li>
                         <a target="_blank" href="https://twitter.com/chetbox">@chetbox</a>
+                    </li>
+                    <li>
+                        <a class="login-button" href="/login">Sign in</a>
                     </li>
                 </ul>
             </div>
@@ -87,7 +77,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Meet ChetBot</h1>
-                        <h3>A user-driven approach to test automation<br>for Android and iOS</h3>
+                        <h3>A user-driven approach to test automation<br>for Android</h3>
                     </div>
                 </div>
             </div>
@@ -98,7 +88,7 @@
     </div>
     <!-- /.intro-header -->
 
-    <a name="demo"/>
+    <a name="demo"></a>
 
     <div style="line-height: 0;">
         <iframe frameborder="0" src="/demo" style="width: 100%; height: 650px;"></iframe>
@@ -107,15 +97,16 @@
     <div class="banner bg-primary" style="background: none #337ab7;">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
-                    <h2>Sign up for early access</h2>
+                <div class="col-sm-8">
+                    <h2>Upload your app</h2>
                 </div>
-                <div class="col-md-6 mc_embed_signup">
-                    <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
+                <div class="col-md-4 mc_embed_signup">
+                  <a class="login-button" href="/login" style="font-size:2em;">Sign in</a>
+                    <!-- <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
                         <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email address" style="display: inline; width: auto;">
                         <div style="position: absolute; left: -5000px;"><input type="text" name="b_58d85b483ebd1268a502c9291_230f6d849e" tabindex="-1" value=""></div>
                         <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default form-control" style="display: inline; width: auto;">
-                    </form>
+                    </form> -->
                     </div>
                 </div>
             </div>
@@ -205,26 +196,23 @@ tap('Sign in');
 
 	<a  name="contact"></a>
     <div class="banner" style="background: none #337ab7;">
-
-        <div class="container">
-
-            <div class="row">
-                <div class="col-sm-6">
-                    <h2>Sign up for early access</h2>
-                </div>
-                <div class="col-md-6 signup">
-                    <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
-                        <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email address" style="display: inline; width: auto;">
-                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_58d85b483ebd1268a502c9291_230f6d849e" tabindex="-1" value=""></div>
-                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default form-control" style="display: inline; width: auto;">
-                    </form>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-        <!-- /.container -->
-
+      <div class="container">
+          <div class="row">
+              <div class="col-sm-8" style="text-align:center;">
+                  <h2 style="margin-bottom: 0.25em;">Upload your app</h2>
+              </div>
+              <div class="col-md-4 mc_embed_signup" style="text-align:center;">
+                <a class="login-button" href="/login" style="font-size:2em;">Sign in</a>
+                  <!-- <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
+                      <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email address" style="display: inline; width: auto;">
+                      <div style="position: absolute; left: -5000px;"><input type="text" name="b_58d85b483ebd1268a502c9291_230f6d849e" tabindex="-1" value=""></div>
+                      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default form-control" style="display: inline; width: auto;">
+                  </form> -->
+                  </div>
+              </div>
+          </div>
+      </div>
+      <!-- /.container -->
     </div>
     <!-- /.banner -->
 
