make /login button look the same as landing page

--- a/server/html/login.html
+++ b/server/html/login.html
@@ -25,10 +25,11 @@
       background-position: 12px center;
       background-repeat: no-repeat;
       color: rgba(255,255,255,0.87);
-      background-color: #525252;
+      background-color: #FF5722;
       text-decoration: none;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.5);
+      box-shadow: 0 2px 5px rgba(0,0,0,0.25);
       display: inline-block;
+      border-radius: 0.25em;
     }
     a.github {
       padding-left: 58px;
