fixing Sign In button alignment, use partial

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -94,24 +94,7 @@
         <iframe frameborder="0" src="/demo" style="width: 100%; height: 650px;"></iframe>
     </div>
 
-    <div class="banner bg-primary" style="background: none #337ab7;">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8">
-                    <h2>Upload your app</h2>
-                </div>
-                <div class="col-md-4 mc_embed_signup">
-                  <a class="login-button" href="/login" style="font-size:2em;">Sign in</a>
-                    <!-- <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
-                        <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email address" style="display: inline; width: auto;">
-                        <div style="position: absolute; left: -5000px;"><input type="text" name="b_58d85b483ebd1268a502c9291_230f6d849e" tabindex="-1" value=""></div>
-                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default form-control" style="display: inline; width: auto;">
-                    </form> -->
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    {{> try-it-banner }}
 
     <!-- Page Content -->
 
@@ -194,27 +177,7 @@ tap('Sign in');
     </div>
     <!-- /.content-section-a -->
 
-	<a  name="contact"></a>
-    <div class="banner" style="background: none #337ab7;">
-      <div class="container">
-          <div class="row">
-              <div class="col-sm-8" style="text-align:center;">
-                  <h2 style="margin-bottom: 0.25em;">Upload your app</h2>
-              </div>
-              <div class="col-md-4 mc_embed_signup" style="text-align:center;">
-                <a class="login-button" href="/login" style="font-size:2em;">Sign in</a>
-                  <!-- <form action="//chetbox.us11.list-manage.com/subscribe/post?u=58d85b483ebd1268a502c9291&amp;id=230f6d849e" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate input-group form-group-lg" target="_blank" novalidate>
-                      <input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email address" style="display: inline; width: auto;">
-                      <div style="position: absolute; left: -5000px;"><input type="text" name="b_58d85b483ebd1268a502c9291_230f6d849e" tabindex="-1" value=""></div>
-                      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-default form-control" style="display: inline; width: auto;">
-                  </form> -->
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- /.container -->
-    </div>
-    <!-- /.banner -->
+    {{> try-it-banner }}
 
     <!-- Footer -->
     <footer>
