--- a/server/html/login.html
+++ b/server/html/login.html
@@ -30,6 +30,7 @@
       box-shadow: 0 2px 5px rgba(0,0,0,0.25);
       display: inline-block;
       border-radius: 0.25em;
+      font-weight: 300;
     }
     a.github {
       padding-left: 58px;
