--- a/server/html/app.html
+++ b/server/html/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{app.name}} - ChetBot</title>
+    <title>{{app.name}} - BOOP.JS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="{{app.icon}}">
 
