--- a/server/html/account.html
+++ b/server/html/account.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Account - ChetBot</title>
+    <title>My Account - BOOP.JS</title>
     <link rel="icon" href="/favicon.ico">
 
     {{> material-design}}
