--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -55,7 +55,7 @@
                         <a href="/docs/BOOP.JS%20API%20reference%20v0.7.1.pdf" target="_blank">Documentation</a>
                     </li>
                     <li>
-                        <a target="_blank" href="https://twitter.com/chetbox">@chetbox</a>
+                        <a target="_blank" href="https://twitter.com/boop_js">@boop_js</a>
                     </li>
                     <li>
                         <a class="login-button" href="/login">Sign in</a>
