--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Apps - BOOP.JS</title>
+    <title>Apps - boop.js</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico">
 
