--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="BOOP.JS - Android UI test automation made simple, right in your web browser.">
+    <meta name="description" content="boop.js - Android UI test automation made simple, right in your web browser.">
     <meta name="author" content="Chetan Padia">
 
     <link rel="icon" href="/favicon.ico">
 
-    <title>BOOP.JS - Android UI automation for humans</title>
+    <title>boop.js - Android UI automation for humans</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#top">BOOP.JS</a>
+                <a class="navbar-brand topnav" href="#top">boop.js</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -76,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-message">
-                        <h1>BOOP.JS</h1>
+                        <h1>boop.js</h1>
                         <h3>A user-driven approach to test automation<br>for Android</h3>
                     </div>
                 </div>
@@ -142,7 +142,7 @@ tap('Sign in');
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Continuous Integration made simple</h2>
-                    <p class="lead">Run tests in the cloud when you commit code, effortlessly. BOOP.JS gives you a one-line integration into your existing CI system and notifies you of any failures immediately.</p>
+                    <p class="lead">Run tests in the cloud when you commit code, effortlessly. boop.js gives you a one-line integration into your existing CI system and notifies you of any failures immediately.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="/images/devices.jpg" alt="">
