--- a/server/html/login.html
+++ b/server/html/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Login - BOOP.JS</title>
+    <title>Login - boop.js</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="/favicon.ico">
 
@@ -50,10 +50,10 @@
   <body class="fullbleed">
     <paper-header-panel class="cyan">
       <paper-toolbar>
-        <div class="title">BOOP.JS</div>
+        <div class="title">boop.js</div>
       </paper-toolbar>
       <div class="content">
-        <img id="main-logo" src="/images/bot.png" title="BOOP.JS"/>
+        <img id="main-logo" src="/images/bot.png" title="boop.js"/>
         <a class="login github" href="/auth/github">Login with GitHub</a>
         <p>Signing in with GitHub is for authentication purposes only. We do not have access to your code.</p>
       </div>
