--- a/server/html/app.html
+++ b/server/html/app.html
@@ -41,8 +41,8 @@
         text-align: left;
       }
 
-      #code tr {
-        margin: 0.5em 0;
+      #code tr > td {
+        padding-bottom: 0.5em;
       }
 
       #code tr a {
