--- a/server/html/app.html
+++ b/server/html/app.html
@@ -162,8 +162,8 @@
               <td class="result">
                 <a href="/app/{{app_id}}/edit/{{id}}">
                   {{#result}}
-                    {{#success}}<iron-icon icon="check" class="success" />{{/success}}
-                    {{#error}}<iron-icon icon="clear" class="failure" />{{/error}}
+                    {{#success}}<iron-icon icon="check" class="success" title="Test passed" />{{/success}}
+                    {{#error}}<iron-icon icon="clear" class="failure" title="{{description}}" />{{/error}}
                     {{#unless success}}{{#unless error}}
                       <iron-icon icon="autorenew" class="running" />
                     {{/unless}}{{/unless}}
@@ -171,23 +171,23 @@
                 </a>
               </td>
               <td>
-                <a href="/app/{{app_id}}/edit/{{id}}">{{name}}</a>
+                <a href="/app/{{app_id}}/edit/{{id}}" title="Test editor">{{name}}</a>
                 {{#result}}
                 <span class="last-run">{{date_relative started_at}}</span>
                 {{/result}}
               </td>
               <td>
-                <a href="javascript:run('{{app_id}}', '{{id}}');">
+                <a href="javascript:run('{{app_id}}', '{{id}}');" title="Run">
                   <paper-icon-button class="compact" icon="av:play-arrow"></paper-icon-button>
                 </a>
               </td>
               <td>
-                <a href="javascript:rename('/app/{{app_id}}/edit/{{id}}', '{{name}}');">
+                <a href="javascript:rename('/app/{{app_id}}/edit/{{id}}', '{{name}}');" title="Rename">
                   <paper-icon-button class="compact" icon="create"></paper-icon-button>
                 </a>
               </td>
             <td>
-              <a href="javascript:ajax_delete('/app/{{app_id}}/edit/{{id}}', '{{id}}');">
+              <a href="javascript:ajax_delete('/app/{{app_id}}/edit/{{id}}', '{{id}}');" title="Delete">
                 <paper-icon-button class="compact" icon="delete"></paper-icon-button>
               </a>
             </td>
