Dummy Google Anayltics method in run.html to prevent crashes

--- a/server/html/run.html
+++ b/server/html/run.html
@@ -50,4 +50,9 @@
     });
   </script>
 
+  <!-- Dummy Google Analytics function to prevent errors -->
+  <script>
+    function ga() {}
+  </script>
+
 </html>
