fix Twitter account in footer

--- a/server/html/landing-page.html
+++ b/server/html/landing-page.html
@@ -202,7 +202,7 @@ tap('Sign in');
                         </li>
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
-                            <a target="_blank" href="https://twitter.com/chetbox">@chetbox</a>
+                            <a target="_blank" href="https://twitter.com/boop_js">@boop_js</a>
                         </li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; Chetbox ltd 2015. All Rights Reserved</p>
