--- a/server/html/apps.html
+++ b/server/html/apps.html
@@ -98,7 +98,7 @@
     <paper-header-panel class="cyan">
       {{#user}}
       <paper-toolbar>
-        <div class="title">Apps</div>
+        <div class="title">boop.js</div>
 
         {{> feedback-button}}
         {{> admin-button}}
