--- a/server/html/edit.html
+++ b/server/html/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{code.name}} - boop.js</title>
+    <title>{{code.name}} - {{app.name}} - boop.js</title>
     <link rel="icon" href="{{app.icon}}">
 
     {{> material-design}}
