--- a/server/html/app.html
+++ b/server/html/app.html
@@ -16,28 +16,6 @@
         text-align: center;
       }
 
-      #app-icon {
-        height: 100px;
-        width: 100px;
-        border-radius: 18px;
-        margin: 50px 50px 5px 50px;
-        -webkit-filter: drop-shadow(0 0 2px rgba(0,0,0,0.2));
-        filter: drop-shadow(0 0 4px rgba(0,0,0,0.2));
-      }
-
-      h2 {
-        margin-top: 0;
-      }
-
-      h2 .identifier {
-        font-size: 0.67em;
-        opacity: 0.5;
-      }
-
-      h2 .version {
-        opacity: 0.33;
-      }
-
       #code {
         display: inline-block;
         list-style: none;
@@ -167,8 +145,7 @@
       <div class="content">
         {{#app}}
         <div id="header">
-          <img id="app-icon" src="{{icon}}" title="{{name}}"/>
-          <h2>{{name}} <span class="version">{{version}}</span><br><span class="identifier">{{identifier}}</span></h2>
+          {{> app-info}}
         </div>
         <div id="actions">
           <a href="javascript:run_all('{{id}}')">
