--- a/server/html/report.html
+++ b/server/html/report.html
@@ -3,7 +3,7 @@
   <head>
     <title>{{code.name}} report - {{result.app.name}} - boop.js</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="{{app.icon}}">
+    <link rel="icon" href="{{result.app.icon}}">
 
     {{> material-design}}
 
@@ -17,43 +17,33 @@
         padding-top: 1em;
       }
 
-      #header h3 {
-        margin: 0;
-        padding: 0.5em 0;
-        background-color: #B6B6B6;
-        color: rgba(255,255,255,0.87);
+      h2 .date {
+        opacity: 0.5;
+        margin-left: 0.5em;
+        font-weight: 100;
       }
-
     </style>
   </head>
   <body class="fullbleed">
     <paper-header-panel class="cyan">
-      {{#user}}
-      <paper-toolbar>
-        <a href="/app/{{../result.app.id}}/test/{{../result.code_id}}/reports">
+      <div class="paper-header">
+        <div class="right">
+          {{> feedback-button}}
+          {{> admin-button user}}
+          {{> account-button user}}
+        </div>
+        <a href="/app/{{result.app.id}}/test/{{result.code_id}}/reports">
           <paper-icon-button icon="arrow-back"></paper-icon-button>
         </a>
-
-        <div class="title">
-          <a href="/app/{{../result.app.id}}/test/{{../result.code_id}}/reports">
-            {{../code.name}}
-          </a>
-        </div>
-
-        {{> feedback-button}}
-        {{> admin-button}}
-        {{> account-button}}
-      </paper-toolbar>
-      {{/user}}
+        {{> app-info result.app}}
+      </div>
       <div class="content">
         <div id="header">
-          {{> app-info result.app}}
           <h2 class="code">
-            <a href="/app/{{id}}/test/{{code_id}}/edit" title="Edit {{code.name}}">
-              {{code.name}}
+            <a href="/app/{{result.app.id}}/test/{{result.code_id}}/edit" title="Edit {{code.name}}">
+              {{code.name}} <span class="date">{{date_relative result.started_at}}</span>
             </a>
           </h2>
-          <h3>{{date_relative result.started_at}}</h3>
         </div>
         {{> test-report}}
       </div>
