fix line number alignment in test report

--- a/server/html/report.html
+++ b/server/html/report.html
@@ -48,6 +48,7 @@
         color: #B6B6B6;
         width: 2em;
         display: inline-block;
+        vertical-align: top;
         text-align: right;
         font-size: 0.8em;
         font-weight: 300;
