report CSS tweaks

--- a/server/html/report.html
+++ b/server/html/report.html
@@ -36,6 +36,7 @@
 
       #report > li {
         white-space: nowrap;
+        padding-bottom: 0.5em;
       }
 
       #report > li pre {
@@ -56,6 +57,7 @@
 
       #report > li.success .source {
         color: #43A047;
+        vertical-align: top;
       }
 
       #report > li.error .source {
