--- a/server/html/app.html
+++ b/server/html/app.html
@@ -158,13 +158,14 @@
             {{#code}}
             <tr>
               <td class="result">
-                <a href="/app/{{app_id}}/test/{{id}}/edit">
                   {{#result}}
-                    {{#success}}<iron-icon icon="check" class="success" title="Test passed" />{{/success}}
-                    {{#error}}<iron-icon icon="clear" class="failure" title="{{description}}" />{{/error}}
-                    {{#unless success}}{{#unless error}}
-                      <iron-icon icon="autorenew" class="running" />
-                    {{/unless}}{{/unless}}
+                    <a href="/app/{{../../app.id}}/test/{{code_id}}/report/{{started_at}}" title="{{date_relative started_at}}">
+                      {{#success}}<iron-icon icon="check" class="success" title="Test passed" />{{/success}}
+                      {{#error}}<iron-icon icon="clear" class="failure" title="{{description}}" />{{/error}}
+                      {{#unless success}}{{#unless error}}
+                        <iron-icon icon="autorenew" class="running" />
+                      {{/unless}}{{/unless}}
+                    </a>
                   {{/result}}
                 </a>
               </td>
