minor CSS tweak in report

--- a/server/html/report.html
+++ b/server/html/report.html
@@ -61,9 +61,12 @@
         font-weight: 300;
       }
 
+      #report > li .source {
+        vertical-align: top;
+      }
+
       #report > li.success .source {
         color: #43A047;
-        vertical-align: top;
       }
 
       #report > li.error .source {
