fix latest result timestamp on /app/_

--- a/server/html/app.html
+++ b/server/html/app.html
@@ -170,9 +170,9 @@
               </td>
               <td>
                 <a href="/app/{{app_id}}/test/{{id}}/edit" title="Test editor">{{name}}</a>
-                {{#result}}
+                {{#latest_result}}
                 <span class="last-run">{{date_relative started_at}}</span>
-                {{/result}}
+                {{/latest_result}}
               </td>
               <td>
                 <a href="/app/{{app_id}}/test/{{id}}/reports" title="All reports">
